# ChangeLog for sys-apps/squashed-portage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Sep 2011; Justin Lecher <jlec@gentoo.org> squashed-portage-0.1.ebuild,
  squashed-portage-0.2.ebuild, squashed-portage-0.3.ebuild,
  squashed-portage-9999.ebuild:
  Define default SRC_URI, #161

*squashed-portage-0.3 (14 Aug 2011)

  14 Aug 2011; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.3.ebuild,
  squashed-portage-9999.ebuild, metadata.xml:
  Version Bump, creates non existing subdirs before mount

  30 Mar 2011; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Fix 9999 to match new HEAD

*squashed-portage-0.2 (30 Mar 2011)

  30 Mar 2011; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.2.ebuild,
  squashed-portage-9999.ebuild:
  Version BUmp, fixes minor code bugs

  26 Mar 2011; Johann Schmitz <johann@j-schmitz.net> squashed-portage-9999.ebuild,
  metadata.xml:
  Updated HOMEPAGE in ebuild

  08 Jan 2011; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild,
  metadata.xml:
  Set HOMEPAGE to j-schmitz.net, fixed metadata.xml

  08 Jan 2011; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild,
  metadata.xml:
  Set HOMEPAGE to j-schmitz.net, fixed metadata.xml

  28 Feb 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  squashed-portage-9999.ebuild:
  Missing sys-fs/squashfs-tools added to RDEPEND

  28 Feb 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  squashed-portage-9999.ebuild:
  First working version
