@@ -1,19 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST squashed-portage-0.1.tar.bz2 5356 RMD160 a008883e17a67920a496a679e6f7b920f705e26a SHA1 a0db437c77ff14ab42d4211490cb5431602c4dec SHA256 e4a41fac4760cf51818bf641e0ff5162e8f71ec0fcc87ab113f481091b99d84a
-DIST squashed-portage-0.2.tar.bz2 5481 RMD160 fff53e6a8ad87500c5e6895c128a907bc03bdef8 SHA1 d9cecae49812cee4d683654be11ae2969784e122 SHA256 23ea90a75f51c36cc5fa84110bc05339b8a095382d487010878d9c1c25b574a2
-DIST squashed-portage-0.3.tar.bz2 5394 RMD160 a006760befc73af691a1554e6d6a2fdf7a96ce07 SHA1 ed634997ef3e1aa05c1ab430e8036d7cb9e97015 SHA256 4a84e010e4204edbf434dfa808f6c4db1654aa318a7ff8f471592d875ea3d190
-EBUILD squashed-portage-0.1.ebuild 817 RMD160 b1f2965aca2d3240983e94906dce89ef5c6023c1 SHA1 0827903a9fca86d03c247c9fd1a8f85680cfc354 SHA256 dfb311a548b85d900bf788730626e3780302054f51a6296fe07d4551fc5f3a82
-EBUILD squashed-portage-0.2.ebuild 817 RMD160 b1f2965aca2d3240983e94906dce89ef5c6023c1 SHA1 0827903a9fca86d03c247c9fd1a8f85680cfc354 SHA256 dfb311a548b85d900bf788730626e3780302054f51a6296fe07d4551fc5f3a82
-EBUILD squashed-portage-0.3.ebuild 817 RMD160 b1f2965aca2d3240983e94906dce89ef5c6023c1 SHA1 0827903a9fca86d03c247c9fd1a8f85680cfc354 SHA256 dfb311a548b85d900bf788730626e3780302054f51a6296fe07d4551fc5f3a82
-EBUILD squashed-portage-9999.ebuild 781 RMD160 eee8b4762c40f40df43cb3570220b71971a0e652 SHA1 adaf5bb21997d48e199bf4c342b65de1aed0f38a SHA256 a36bfb35d212cc659a474d6afe017551de47970b6b5375e54c26478c38dc2f3e
-MISC ChangeLog 1505 RMD160 a89b3bd5d8691f7af5a163b5d07bf02efe9748aa SHA1 3b6d524a81bd4c638330498ec273e663cc7841af SHA256 b338491ab99b5fb527bab76c6a918cf749ba55c700300d795df3a7502409791f
-MISC metadata.xml 359 RMD160 65416ef7b03a616b25d0adfd7de7450e7888d9a1 SHA1 1546efa4d0a58b3a702d32bb37bf92a6cda8792c SHA256 707f47537fdb4b4b6eb33fc994f422844287d88b2ae246d9edd40a36659566a0
+DIST squashed-portage-0.1.tar.bz2 5356 SHA256 e4a41fac4760cf51818bf641e0ff5162e8f71ec0fcc87ab113f481091b99d84a
+DIST squashed-portage-0.2.tar.bz2 5481 SHA256 23ea90a75f51c36cc5fa84110bc05339b8a095382d487010878d9c1c25b574a2
+DIST squashed-portage-0.3.tar.bz2 5394 SHA256 4a84e010e4204edbf434dfa808f6c4db1654aa318a7ff8f471592d875ea3d190
+DIST squashed-portage-0.4.tar.bz2 5487 SHA256 c0d1ee1745596a33d477373ba8e30f201517e388272118571fc2dacc952f1f34 SHA512 87d78e4d6b1562245dade7610df26224197d9e03429bfb242865f3a57ba894c0bad5f4753df1b5104f715543fc51c01a177d36038f4497114aecd1bd17c135a9 WHIRLPOOL 1e4aaf91b8ce902a97832b394f32e1ea38db153e840f8fe9ddfabbd9b7d00c7abd6d4fb8a6232e7f73940920a52e5d8e125b7d2e74eb00ec36184d7b80297224
+EBUILD squashed-portage-0.1.ebuild 817 SHA256 dfb311a548b85d900bf788730626e3780302054f51a6296fe07d4551fc5f3a82 SHA512 0f2318b530da5c379b78f8d3b955107616626b010146c1769c65c7994b4adcd176e0449cee86cd2b08efe18977a6c586294997a7052792e9de5d04b70c5d2d84 WHIRLPOOL 251d68253554f4030f8f8c596c59a03cdb3b5d4f2ec0e327d5f6e2a96e77846073b649f87b6385574b35f16c6bc6e8789724ccade82de0db7db840ae34246f1e
+EBUILD squashed-portage-0.2.ebuild 817 SHA256 dfb311a548b85d900bf788730626e3780302054f51a6296fe07d4551fc5f3a82 SHA512 0f2318b530da5c379b78f8d3b955107616626b010146c1769c65c7994b4adcd176e0449cee86cd2b08efe18977a6c586294997a7052792e9de5d04b70c5d2d84 WHIRLPOOL 251d68253554f4030f8f8c596c59a03cdb3b5d4f2ec0e327d5f6e2a96e77846073b649f87b6385574b35f16c6bc6e8789724ccade82de0db7db840ae34246f1e
+EBUILD squashed-portage-0.3.ebuild 817 SHA256 dfb311a548b85d900bf788730626e3780302054f51a6296fe07d4551fc5f3a82 SHA512 0f2318b530da5c379b78f8d3b955107616626b010146c1769c65c7994b4adcd176e0449cee86cd2b08efe18977a6c586294997a7052792e9de5d04b70c5d2d84 WHIRLPOOL 251d68253554f4030f8f8c596c59a03cdb3b5d4f2ec0e327d5f6e2a96e77846073b649f87b6385574b35f16c6bc6e8789724ccade82de0db7db840ae34246f1e
+EBUILD squashed-portage-0.4.ebuild 794 SHA256 baff6b986cd95629246e113b339a04395e315d2e5ca3b184bb1c7fc4ff2e2682 SHA512 0ac3425092bf9a3c5593865798783a4658de76bc3ee97382ad2f4d5316a39a7b5c79ec29c83947f85a78ca1b44c55e8aa2a10461cb1f1b6a39cf4493dba870bf WHIRLPOOL ab4bd32d5f1c23d4a81548ab99b66b2968cdea94c75209f5f17843cc9eb47fb6ae3a27177f508be7e96af307ae6e73c0389db744e783a8ee9dceb4de358307cd
+EBUILD squashed-portage-9999.ebuild 781 SHA256 a36bfb35d212cc659a474d6afe017551de47970b6b5375e54c26478c38dc2f3e SHA512 8b2d3fb3d5c9634a32b6d4fcb4c89445fee6867d6870595cbfa275df8ce3203502677a80ef3a750959eb89f2736819e40e884e2e970ce50e9f5da8b46ab3defc WHIRLPOOL 4e8c6b5dfd4d045a3a4b2ff0ca267463bd5447efbe4b15275d2b3430c386dab5e080200263e0dc3a78e88dd4387f63ee3fe62c9461b1db10f87bb5c4bb56c3a8
+MISC ChangeLog 1716 SHA256 c186b543d02ae475520b058e4f1e59a09d8189c755d8f692b295d1c3f631ab4f SHA512 b941ac6b9854df703af1d0a2f3409c8d81a2bade52178f6c95d5f90f755a40904d4220c05feb0bef7e2f3548348cb6d3e87c25eda803759df4f4bd9d188f4ffb WHIRLPOOL 9388b89c84f8e9be0c8d5c059b8e24b36e924dc77fb9c0bdb0af77ecece17317e7f16445c1283a9b2d9563e66ba0d1c06d02551ddf23d62292aff82cca8d494e
+MISC metadata.xml 337 SHA256 f2ae19508e9b020fb3c579ad2a1aa7a50148f54c9aff919e8fe0e62d527a8134 SHA512 b2a3ca56d4e952b0a067bc4c28877dc3c46b4d574a0e6bd4cd713a9134597aa1a9d6a851076b670c1ec22576502e92d57fe3758968f665e4a384b370b74fab4d WHIRLPOOL 90fc42ea2f4ee7537f24b2795850ce9e915a958d5e63e08a678401a501c445f660cca141fe5b21d545f0c51100ef6f216ccafe84df1e121bb3ed7e59cf580a6b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk580aEACgkQgAnW8HDreRZsnACePx51M4FieyhUQnl73Kr98w5j
-J+gAnRGFe3qxe4hN5GA8gFMJtUT5ac1f
-=7W0Z
+iEYEAREIAAYFAlAougUACgkQgAnW8HDreRZZogCeO2Qp+/kbJJP97VqH+DWAjHw1
+EeEAn3sgrljUsR6jmYScc2JKbQX7kSW6
+=0nT5
 -----END PGP SIGNATURE-----
