@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/squashed-portage
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*squashed-portage-0.4 (13 Aug 2012)
+
+  13 Aug 2012; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.4.ebuild,
+  metadata.xml:
+  Version BUmp, fixes missing /etc/make.globals; drop no-herd from metadata.xml
 
   23 Sep 2011; Justin Lecher <jlec@gentoo.org> squashed-portage-0.1.ebuild,
   squashed-portage-0.2.ebuild, squashed-portage-0.3.ebuild,
